put and delete routes
