# src/routes/events.ts
@@ -1,3 +1,16 @@
-// const routes = require("express").Router();
+const eventsRoute = require("express").Router();
+const {
+  getAllEvents,
+  addEvent,
+  getEventById,
+  updateEvent,
+  deleteEvent,
+} = require("../controllers/events");
 
-// routes.use("/", require("./events/events"));
+eventsRoute.get("/", getAllEvents);
+eventsRoute.post("/", addEvent);
+eventsRoute.get("/:id", getEventById);
+eventsRoute.put("/:id", updateEvent);
+eventsRoute.delete("/:id", deleteEvent);
+
+module.exports = eventsRoute;
