# src/routes/index.ts
@@ -1,6 +1,7 @@
 import { Request, Response } from "express";
 const routes = require("express").Router();
 const usersRouter = require("./users");
+const eventsRouter = require("./events");
 const swaggerRouter = require("./swagger");
 
 routes.get("/", (req: Request, res: Response) => {
@@ -8,6 +9,9 @@ routes.get("/", (req: Request, res: Response) => {
 });
 
 routes.use("/users", usersRouter);
+
+routes.use("/events", eventsRouter);
+
 routes.use("/api-docs", swaggerRouter);
 
 module.exports = routes;
